--- a/src/resources/scss/partials/debugBar/_debugBar.scss
+++ b/src/resources/scss/partials/debugBar/_debugBar.scss
@@ -125,6 +125,12 @@ $debug-bar--size : 38px;
         )
       );
     }
+
+    &block,
+    &toggle {
+      height     : 36px;
+      box-sizing : border-box;
+    }
   }
 }
 
